tests/support/validation/invalid/overlapping_cal_exception/calendar.cal
CAL;06042020;20062020;Albny   ;               
DAT;11042020;Albny   ;        ;          ;  ;  ;          ;Albny   ;        ;          ;  ;  ;     
CAL;06042020;20062020;BenTT   ;        
DAT;23052020;BenTT   ;atn20016;Saturday  ; 5;02;BUS22020  ;BenTT   ;htn20016;Saturday  ; 5;02;BUS22020  
CAL;06042020;20062020;Cabot   ;        
DAT;11042020;Cabot   ;abc20016;Saturday  ; 5;02;BUS22020  ;Cabot   ;hbc20016;Saturday  ; 5;02;BUS22020  
CAL;06042020;20062020;Somvl   ;        
DAT;11042020;Somvl   ;abt20a36;Saturday  ; 5;02;BUS22020  ;Somvl   ;hbt20a36;Saturday  ; 5;02;BUS22020  
